--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GreenSoup Page</title>
 </head>
+<style>
+h1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+p{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+</style>
 <body>
-    <p>hello there, this page is in development for now lol. GreenSoupDev is cool</p>
+
+    <center>
+    <h1>Hello.</h1>
+
+    <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, 3d modeler and game maker.</p>
+    <br>
+    <br>
+    <br>
+    <p>This server is in development so...</p>
+</center>
 </body>
 </html>
