--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GreenSoup Page</title>
+    <title>GreenSoup</title>
 </head>
 <style>
 h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: green;
 }
 p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -17,13 +18,18 @@ p{
 <body>
 
     <center>
+        <br>
+        <br>
     <h1>Hello.</h1>
 
     <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, 3d modeler and game maker.</p>
     <br>
     <br>
     <br>
-    <p>This server is in development so...</p>
+    <p>This site is in development so...</p>
+    <br>
+    <br>
+    <p>I like the turtles.</p>
 </center>
 </body>
 </html>
