--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ p{
         <br>
     <h1>Hello.</h1>
 
-    <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler and game maker.</p>
+    <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler, game maker and more things that im lazy to put here bruh.</p>
     <br>
     <br>
     <br>
