--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>GreenSoup</title>
 </head>
-<style>
-h1{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: green;
-}
-p{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-</style>
 <body>
 
     <center>
@@ -22,14 +14,15 @@ p{
         <br>
     <h1>Hello.</h1>
 
-    <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler, game maker and more things that im lazy to put here bruh.</p>
+    <!-- <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler, game maker and more stuff that im lazy to put here bruh.</p> -->
+    <p>Hi there. Im GreenSoup Dev and i'm a programmer and graphic designer.</p>
     <br>
     <br>
     <br>
     <p>This site is in development so...</p>
     <br>
     <br>
-    <p>I like the turtles.</p>
+    <p1>I like the turtles.</p1>
 </center>
 </body>
 </html>
