--- a/about.html
+++ b/about.html
@@ -23,19 +23,13 @@
 
     <h1>Hello.</h1>
 
-    <!-- <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler, game maker and more stuff that im lazy to put here bruh.</p> -->
-    <p>Hi there. Im GreenSoup Dev and i'm a programmer and graphic designer.</p>
-    <br>
-    <br>
-    <br>
-    <p>This site is in development so...</p>
-    <br>
-    <br>
-    <p1>I like the turtles.</p1>
+     <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler, game maker and more stuff that im lazy to put here bruh.</p>
+   
+  
     
 
       
-   <!-- <table>
+    <table>
       <tr>
         <td>
           <img class="ie" src="webgifs/ie_anim.gif" alt="ie"></img>
@@ -47,7 +41,7 @@
           <img class="ie" src="webgifs/98plusani.gif" alt="ie"></img>
         </td>
       </tr>
-    </table>-->
+    </table>
   </center>
 </body>
 </html>
