--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+    <meta property="og:title" content="GreenSoup Webpage" />
+    <meta property="og:description" content="GreenSoup Inc. official webpage." />
+    <meta property=”og:url” content=”https://greensoupdeveloper.github.io/GreenSoupDev-Webpage/” />
+    <meta property="og:image" content="https://raw.githubusercontent.com/minecraft-timeline/minecraft-timeline.github.io/master/images/banner.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="400" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:image:alt" content="GreenSoup Webpage" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
