--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="GreenSoup Webpage" />
     <meta property="og:description" content="GreenSoup Inc. official webpage." />
     <meta property=”og:url” content=”https://greensoupdeveloper.github.io/GreenSoupDev-Webpage/” />
-    <meta property="og:image" content="https://raw.githubusercontent.com/minecraft-timeline/minecraft-timeline.github.io/master/images/banner.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/greensoupdeveloper/greensoupdeveloper.github.io/master/images/greeny.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="300" />
