--- a/greensmoddownload.html
+++ b/greensmoddownload.html
@@ -35,7 +35,8 @@
         <br>
 
        
-        <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1FUQsGD0CMVc25NigDTEU9MYsCt6hso7z&export=download" download>Download GreenSoup's Mod last version</a>
+        <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1FUQsGD0CMVc25NigDTEU9MYsCt6hso7z&export=download" download>Download GreenSoup's Mod V1.0</a>
+        <p>V1.1 coming very soon...</p>
         <br>
         <!--<br><a class="downloadbutton"href="greensmod.html">Downloads</a>-->
            
