--- a/greensmoddownload.html
+++ b/greensmoddownload.html
@@ -34,7 +34,7 @@
       <h1 class="prtext">Downloads</h1>
         <br>
 
-        <br><a class="downloadbutton" href="https://drive.google.com/file/d/1py08j5_p4JpeUdVErYlR0yslunc5EQm9/view?usp=sharing" download>Download GreenSoup's Mod V1.1</a> 
+        <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1py08j5_p4JpeUdVErYlR0yslunc5EQm9&export=download" download>Download GreenSoup's Mod V1.1</a> 
         <br>
         <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1FUQsGD0CMVc25NigDTEU9MYsCt6hso7z&export=download" download>Download GreenSoup's Mod V1.0</a>
        
