--- a/greensmod.html
+++ b/greensmod.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     <meta property="og:title" content="GreenSoup Webpage" />
-    <meta property="og:description" content="GreenSoup Inc. official webpage." />
+    <meta property="og:description" content="GreenSoup' Mod official webpage." />
     <meta property=”og:url” content=”https://greensoupdeveloper.github.io/GreenSoupDev-Webpage/” />
     <meta property="og:image" content="https://raw.githubusercontent.com/greensoupdeveloper/greensoupdeveloper.github.io/master/images/greeny.png" />
     <meta property="og:image:type" content="image/png" />
@@ -179,7 +179,23 @@ a{
             <br>
             <br>
             <br>
-
+	     <table cellspacing="10">
+            <h1 class="prtext">GreenSoup's Mod</h1>
+            <tr>
+              <td>
+                <img class="img1" src="images/gsmod1.png" alt="img1"></img>
+                <img class="img1" src="images/gsmod2.png" alt="img1"></img>
+              </td>
+              
+              <td >
+                <p>GreenSoup's Mod is a sandbox Mod for the <Strong>Source Engine</Strong> and <Strong>Half-Life 2</Strong> based on <Strong>Garry's Mod</Strong> and <em>JBMod</em>. This mod's goal is to have a similar experience to <Strong>Garry's Mod</Strong> but <em>Free</em></p>
+                <br><a class="downloadbutton"href="greensmod.html">See more...</a>
+              </td>
+            </tr>
+          </table>
+  <br>
+            <br>
+            <br>
 <h1 class="prtext">News</h1>
 <br>
 
