--- a/greensmod.html
+++ b/greensmod.html
@@ -196,6 +196,12 @@ a{
   <br>
             <br>
             <br>
+	    <h1 class="prtext">Install</h1>
+	     <br>
+            <br>
+	    <p>To install GSMOD you need to:<br>1.Go to Steam, now to Library and search Source SDK Base 2013 Singleplayer and install it.<br>2.When it finished installing, Download GSMOD and then extract the .7z file with 7zip or WinRAR, and now copy the extracted folder and go to "C:\Program Files (x86)\Steam\steamapps\sourcemods" and paste the folder.<br>3.Now restart Steam and the mod should appear on your Library, enjoy!</p>
+	      <br>
+            <br>
 <h1 class="prtext">News</h1>
 <br>
 
