--- a/greensmoddownload.html
+++ b/greensmoddownload.html
@@ -33,7 +33,8 @@
       <br>
       <h1 class="prtext">Downloads</h1>
         <br>
-
+ <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=17L0RtUjKcL3vh5vE7kDNQVYGdfSrO6F4&export=download" download>Download GreenSoup's Mod V1.2</a> 
+        <br><br><br>
         <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1py08j5_p4JpeUdVErYlR0yslunc5EQm9&export=download" download>Download GreenSoup's Mod V1.1</a> 
         <br><br><br>
         <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1FUQsGD0CMVc25NigDTEU9MYsCt6hso7z&export=download" download>Download GreenSoup's Mod V1.0</a>
