--- a/greensmod.html
+++ b/greensmod.html
@@ -205,12 +205,13 @@ a{
 <h1 class="prtext">News</h1>
 <br>
 
-<p>GreenSoup's Mod v1.1 has been released! (18/11/2023)</p>
-<p>GreenSoup's Mod v1.1 has been released today and its like a bugfix update. CHANGELOG:<br><br>
-  Redesigned Menu<br>
+<p>GreenSoup's Mod v1.2 has been released! (06/12/2023)</p>
+<p>GreenSoup's Mod v1.2 has been released today and its like a bugfix update or something. CHANGELOG:<br><br>
+  A bit redesigned Menu<br>
   Bugfixes<br>
   A bit changed ToolGun<br>
-  Added gm_flatdirt<br>
+  Added gs_structure<br>
+  Updated glueblob model<br>
   
   And more things that im lazy to put here.</p>
       
