--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="style.css">
     <title>GreenSoupDev - Projects</title>
 </head>
+    <style>
+         .prtext{
+    font-size: 75px;
+    color: #ffffff;
+  }
+    </style>
 <body>
     <br>
     <br>
@@ -34,7 +40,7 @@
         <br>
        
         <table cellspacing="10">
-            <h1 class="prtext">GreenSoup's Mod</h1>
+           <img class="" src="images/gsmod.png" width="666" alt="logo"></img>
             <tr>
               <td>
                 <img class="img1" src="images/gsmod1.png" alt="img1"></img>
