--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
     <br>
     <div class="topnav">
         <a href="index.html">Home</a>
+        <a href="blog.html">Blog</a>
         <a class="active" href="about.html">About</a>
         <a href="projects.html">Projects</a>
         
