--- a/greensmoddownload.html
+++ b/greensmoddownload.html
@@ -33,7 +33,9 @@
       <br>
       <h1 class="prtext">Downloads</h1>
         <br>
- <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=17L0RtUjKcL3vh5vE7kDNQVYGdfSrO6F4&export=download" download>Download GreenSoup's Mod V1.2</a> 
+        <br><a class="downloadbutton" href="https://file.garden/ZXx3Uy8pMXxJ-4q8/greensoupmodv1-3.7z" download>Download GreenSoup's Mod V1.3</a> 
+        <br><br><br>
+        <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=17L0RtUjKcL3vh5vE7kDNQVYGdfSrO6F4&export=download" download>Download GreenSoup's Mod V1.2</a> 
         <br><br><br>
         <br><a class="downloadbutton" href="https://drive.google.com/u/0/uc?id=1py08j5_p4JpeUdVErYlR0yslunc5EQm9&export=download" download>Download GreenSoup's Mod V1.1</a> 
         <br><br><br>
