--- a/greensmod.html
+++ b/greensmod.html
@@ -212,15 +212,14 @@ a{
 <h1 class="prtext">News</h1>
 <br>
 
-<p>GreenSoup's Mod v1.2 has been released! (06/12/2023)</p>
-<p>GreenSoup's Mod v1.2 has been released today and its like a bugfix update or something. CHANGELOG:<br><br>
-  A bit redesigned Menu<br>
+<p>GreenSoup's Mod v1.3 has been released! (28/12/2023)</p>
+<p>GreenSoup's Mod v1.3 has been released today and its like a bugfix update or something. CHANGELOG:<br><br>
+  A very redesigned Menu<br>
   Bugfixes<br>
-  A bit changed ToolGun<br>
-  Added gs_structure<br>
-  Updated glueblob model<br>
+  Added support for Portal and CS:S<br>
+
   
-  And more things that im lazy to put here.</p>
+  And more things that i may have missed.</p>
       
   
   </center>
