--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
               
               <td >
                 <p>GreenSoup's Mod is a sandbox Mod for the <Strong>Source Engine</Strong> and <Strong>Half-Life 2</Strong> based on <Strong>Garry's Mod</Strong> and <em>JBMod</em>. This mod's goal is to have a similar experience to <Strong>Garry's Mod</Strong> but <em>Free</em></p>
-                <br><a class="downloadbutton"href="greensmod.html">See more...</a>
+                <br><a class="downloadbutton"href="https://greensoupdeveloper.github.io/greensoupmod.com/">See more...</a>
               </td>
             </tr>
           </table>
