--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+ <link rel="shortcut icon" type="image/png" href="images/greeny.png"/>
   <meta property="og:title" content="GreenSoup Webpage" />
   <meta property="og:description" content="GreenSoup Inc. official webpage." />
   <meta property=”og:url” content=”https://greensoupdeveloper.github.io/GreenSoupDev-Webpage/” />
