--- a/greensmodcredits.html
+++ b/greensmodcredits.html
@@ -31,7 +31,7 @@
     <center>
       <br>
       <br>
-      <p>Mod made by <strong>GreenSoupDev</strong> with help of<em> Voidscape Software</em>.</p>
+      <p>Mod made by <strong>GreenSoupDev</strong> with help of<em>  Jigmass (Voidscape Software)</em>.</p>
         <br>
 
        
