--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
     <h1 class="helloAbout">Hello there.</h1>
 
-     <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer, a bit of animator and artist, a bit of musician, 3d modeler, game maker and more stuff that im lazy to put here bruh.</p>
+     <p>Hi there. Im GreenSoup Dev and i'm a programmer, graphic designer and more stuff that im lazy to put here bruh.</p>
    
  
     
