--- a/404.html
+++ b/404.html
@@ -50,6 +50,9 @@
     
     <p>You just got a 404 error. How did this happen? I dont know. but take in mind that: <br></p>
     <h1 class="tiny">i like the turtles.</h1>
+<br>
+<br>
+    <img src="images/sleep.gif" style="width: 200px;height: 100px;">
     
 
   
