--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
     <p>Hi there. Im GreenSoup Dev and i'm a programmer and graphic designer.</p>
     <br>
-    
+    <img src="images/mo.png" style="width: 200px;height: 200px;">
     <br>
     <br>
     <p>This site is in development so...</p>
