--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 
       
  
-    <p>If you want to contact me, my Discord account is <strong>greensoupdeveloper</strong></p>
+    <p>If you want to contact me, my Discord account is <strong>greensoupdevr</strong></p>
     <img class="greensoupicon128" src="images/greeny.png" alt="greensoup logo">
   </center>
   <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
