--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GreenSoupDev - Old Page</title>
+</head>
+<body>
+    <center>
+        <h1>This page is outdated.</h1>
+        <br>
+        <a href="">Here's the new webpage :)</a>
+    </center>
+</body>
+</html>
+
+
+<!--<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <link rel="shortcut icon" type="image/png" href="images/greeny.png">
@@ -45,7 +62,7 @@
             <p1>I like the turtles.</p1>
         </center>
         <footer class="bg-dark text-center text-white text-lg-start fixed-bottom">
-            <!-- Copyright -->
+           
             <div class="text-center p-2" style="background-color: rgb(0, 0, 0)">
                 <br>
                 © 2024 Copyright:
@@ -57,7 +74,7 @@
                 <br>
                 <br>
             </div>
-            <!-- Copyright -->
+        
         </footer>
     </body>
-</html>
+</html>-->
