--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <center>
         <h1>This page is outdated.</h1>
         <br>
-        <a href="https://greensoupdeveloper.github.io/index.html">Here's the new webpage :)</a>
+        <a href="https://greensoupdeveloper.github.io/greensoupdev/index.html">Here's the new webpage :)</a>
     </center>
 </body>
 </html>
