--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
         <br>
         <a href="https://greensoupdeveloper.github.io/greensoupdev/index.html">Here's the new webpage :)</a>
     </center>
+    <script src="https://utteranc.es/client.js"
+        repo="GreenSoupDev-Webpage"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script>
 </body>
 </html>
 
