--- a/index.html
+++ b/index.html
@@ -7,17 +7,12 @@
 </head>
 <body>
     <center>
+        <script>window.location.href = "https://greensoupdeveloper.github.io/greensoupdev/";</script>
         <h1>This page is outdated.</h1>
         <br>
         <a href="https://greensoupdeveloper.github.io/greensoupdev/index.html">Here's the new webpage :)</a>
     </center>
-    <script src="https://utteranc.es/client.js"
-        repo="GreenSoupDev-Webpage"
-        issue-term="pathname"
-        theme="github-light"
-        crossorigin="anonymous"
-        async>
-</script>
+    
 </body>
 </html>
 
