--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <center>
-        <script>window.location.href = "https://greensoupdeveloper.github.io/greensoupdev/";</script>
+        <script>window.location.href = "https://greensoupdeveloper.github.io/";</script>
         <h1>This page is outdated.</h1>
         <br>
-        <a href="https://greensoupdeveloper.github.io/greensoupdev/index.html">Here's the new webpage :)</a>
+        <a href="https://greensoupdeveloper.github.io/index.html">Here's the new webpage :)</a>
     </center>
     
 </body>
